# book-recommender

./: .gitignore  README.md  main.py  pyproject.toml
src/: api_client.py  books_api.py  data_processing.py  main.py  recommendation_engine.py
tests/: test_api_client.py  test_data_processing.py  test_recommendation_engine.py
utilities/: get_sample_books.py
